fix: full-name and profession overflow to next column

--- a/index.css
+++ b/index.css
@@ -91,7 +91,6 @@ html.no-scroll {
 }
 
 .landing-col {
-  max-width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -113,7 +112,7 @@ html.no-scroll {
   align-items: flex-end;
 }
 
-  #full-name > i,
+#full-name > i,
 #profession > i {
   display: inline-flex;
   font-style: normal;
